--- a/Lesson 7/index.html
+++ b/Lesson 7/index.html
@@ -13,11 +13,11 @@
       <section class="articles">
         <div class="container">
           <ul class="articles__list">
-            <li class="articles__list-item">
-              <img class="article__img" src="" alt="" />
+            <li class="articles__list-item article-1">
+              <img class="article__img" src="./img/article__img.jpeg" alt="" />
               <div class="article__info">
                 <h3 class="article__info-title">
-                  Disease detection, check up in the laboratory
+                  1
                 </h3>
                 <p class="article__info-description">
                   In this case, the role of the health laboratory is very
@@ -26,11 +26,11 @@
                 <a class="article__link" href="#">Read more</a>
               </div>
             </li>
-            <li class="articles__list-item">
-              <img class="article__img" src="" alt="" />
+            <li class="articles__list-item article-2">
+              <img class="article__img" src="./img/article__img.jpeg" alt="" />
               <div class="article__info">
                 <h3 class="article__info-title">
-                  Disease detection, check up in the laboratory
+                  2
                 </h3>
                 <p class="article__info-description">
                   In this case, the role of the health laboratory is very
@@ -39,11 +39,11 @@
                 <a class="article__link" href="#">Read more</a>
               </div>
             </li>
-            <li class="articles__list-item">
-              <img class="article__img" src="" alt="" />
+            <li class="articles__list-item article-3">
+              <img class="article__img" src="./img/article__img.jpeg" alt="" />
               <div class="article__info">
                 <h3 class="article__info-title">
-                  Disease detection, check up in the laboratory
+                  3
                 </h3>
                 <p class="article__info-description">
                   In this case, the role of the health laboratory is very
