--- a/Lesson 7/index.html
+++ b/Lesson 7/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/main.css" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    /> -->
     <title>Lesson 7</title>
   </head>
   <body>
@@ -16,9 +22,7 @@
             <li class="articles__list-item article-1">
               <img class="article__img" src="./img/article__img.jpeg" alt="" />
               <div class="article__info">
-                <h3 class="article__info-title">
-                  1
-                </h3>
+                <h3 class="article__info-title">1</h3>
                 <p class="article__info-description">
                   In this case, the role of the health laboratory is very
                   important to do a disease detection...
@@ -29,9 +33,7 @@
             <li class="articles__list-item article-2">
               <img class="article__img" src="./img/article__img.jpeg" alt="" />
               <div class="article__info">
-                <h3 class="article__info-title">
-                  2
-                </h3>
+                <h3 class="article__info-title">2</h3>
                 <p class="article__info-description">
                   In this case, the role of the health laboratory is very
                   important to do a disease detection...
@@ -42,9 +44,7 @@
             <li class="articles__list-item article-3">
               <img class="article__img" src="./img/article__img.jpeg" alt="" />
               <div class="article__info">
-                <h3 class="article__info-title">
-                  3
-                </h3>
+                <h3 class="article__info-title">3</h3>
                 <p class="article__info-description">
                   In this case, the role of the health laboratory is very
                   important to do a disease detection...
