--- a/Lesson 7/index.html
+++ b/Lesson 7/index.html
@@ -15,8 +15,11 @@
   </head>
   <body>
     <main>
+
+      <a href="#" class="btn">View all</a>
+      
       <!-- Articles section -->
-      <section class="articles">
+      <!-- <section class="articles">
         <div class="container">
           <ul class="articles__list">
             <li class="articles__list-item article-1">
@@ -54,7 +57,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- End of Articles section -->
     </main>
   </body>
