--- a/2-month/Lesson 1/index.html
+++ b/2-month/Lesson 1/index.html
@@ -4,9 +4,103 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/main.css" />
     <title>Lesson 1</title>
   </head>
   <body>
+    <main>
+      <!-- Process section -->
+      <section class="process">
+        <div class="container process__container">
+          <img
+            class="process__box-img"
+            src="./images/step__img.png"
+            alt="process"
+          />
+          <div class="process__box-info">
+            <h2>Talablarni aniqlab chiqamiz</h2>
+            <p>
+              Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu.
+              Nam facilisis
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- End of Process section -->
+      <!-- Process section -->
+      <section class="process">
+        <div class="container process__container">
+          <img
+            class="process__box-img"
+            src="./images/step__img.png"
+            alt="process"
+          />
+          <div class="process__box-info">
+            <h2>Talablarni aniqlab chiqamiz</h2>
+            <p>
+              Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu.
+              Nam facilisis
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- End of Process section -->
+      <!-- Process section -->
+      <section class="process">
+        <div class="container process__container">
+          <img
+            class="process__box-img"
+            src="./images/step__img.png"
+            alt="process"
+          />
+          <div class="process__box-info">
+            <h2>Talablarni aniqlab chiqamiz</h2>
+            <p>
+              Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu.
+              Nam facilisis
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- End of Process section -->
+      <!-- Process section -->
+      <section class="process">
+        <div class="container process__container">
+          <img
+            class="process__box-img"
+            src="./images/step__img.png"
+            alt="process"
+          />
+          <div class="process__box-info">
+            <h2>Talablarni aniqlab chiqamiz</h2>
+            <p>
+              Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu.
+              Nam facilisis
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- End of Process section -->
+      <!-- Process section -->
+      <section class="process">
+        <div class="container process__container">
+          <img
+            class="process__box-img"
+            src="./images/step__img.png"
+            alt="process"
+          />
+          <div class="process__box-info">
+            <h2>Talablarni aniqlab chiqamiz</h2>
+            <p>
+              Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu.
+              Nam facilisis
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- End of Process section -->
+    </main>
+
     <!-- <a href="services.html#webDevelopment">Web development</a>
     <a href="services.html#telegramBot">Telegram bot</a>
     <a href="services.html#smm">SMM</a>
