--- a/2-month/Lesson 1/index.html
+++ b/2-month/Lesson 1/index.html
@@ -9,8 +9,23 @@
   </head>
   <body>
     <main>
+      <div class="menu">
+        <h2>Biz internetda</h2>
+        <ul>
+          <li class="tg">
+            <a href="#">Telegram</a>
+          </li>
+          <li class="fc">
+            <a href="#">Facebook</a>
+          </li>
+          <li class="ins">
+            <a href="#">Instagram</a>
+          </li>
+        </ul>
+      </div>
+
       <!-- Process section -->
-      <section class="process">
+      <!-- <section class="process">
         <div class="container process__container">
           <img
             class="process__box-img"
@@ -25,79 +40,7 @@
             </p>
           </div>
         </div>
-      </section>
-      <!-- End of Process section -->
-      <!-- Process section -->
-      <section class="process">
-        <div class="container process__container">
-          <img
-            class="process__box-img"
-            src="./images/step__img.png"
-            alt="process"
-          />
-          <div class="process__box-info">
-            <h2>Talablarni aniqlab chiqamiz</h2>
-            <p>
-              Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu.
-              Nam facilisis
-            </p>
-          </div>
-        </div>
-      </section>
-      <!-- End of Process section -->
-      <!-- Process section -->
-      <section class="process">
-        <div class="container process__container">
-          <img
-            class="process__box-img"
-            src="./images/step__img.png"
-            alt="process"
-          />
-          <div class="process__box-info">
-            <h2>Talablarni aniqlab chiqamiz</h2>
-            <p>
-              Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu.
-              Nam facilisis
-            </p>
-          </div>
-        </div>
-      </section>
-      <!-- End of Process section -->
-      <!-- Process section -->
-      <section class="process">
-        <div class="container process__container">
-          <img
-            class="process__box-img"
-            src="./images/step__img.png"
-            alt="process"
-          />
-          <div class="process__box-info">
-            <h2>Talablarni aniqlab chiqamiz</h2>
-            <p>
-              Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu.
-              Nam facilisis
-            </p>
-          </div>
-        </div>
-      </section>
-      <!-- End of Process section -->
-      <!-- Process section -->
-      <section class="process">
-        <div class="container process__container">
-          <img
-            class="process__box-img"
-            src="./images/step__img.png"
-            alt="process"
-          />
-          <div class="process__box-info">
-            <h2>Talablarni aniqlab chiqamiz</h2>
-            <p>
-              Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu.
-              Nam facilisis
-            </p>
-          </div>
-        </div>
-      </section>
+      </section> -->
       <!-- End of Process section -->
     </main>
 
