--- a/2-month/Lesson 4/index.html
+++ b/2-month/Lesson 4/index.html
@@ -8,6 +8,13 @@
     <title>Lesson 4</title>
   </head>
   <body>
+
+    <section class="scrollbar">
+      <div class="srollbar-track">
+        <div class="scrollbar-thumb"></div>
+      </div>
+    </section>
+    
     <section>
       <div class="container wrapper__container">
         <!-- <img
