--- a/2-month/Lesson 4/index.html
+++ b/2-month/Lesson 4/index.html
@@ -9,21 +9,23 @@
   </head>
   <body>
 
-    <section class="scrollbar">
+    <div class="box">1</div>
+
+    <!-- <section class="scrollbar">
       <div class="srollbar-track">
         <div class="scrollbar-thumb"></div>
       </div>
-    </section>
+    </section> -->
     
-    <section>
+    <!-- <section>
       <div class="container wrapper__container">
-        <!-- <img
+        <img
           src="./images/greenline.jpeg"
           srcset="./images/greenline.jpeg 1x, ./images/greenline@2x.jpeg 2x"
           alt="greenline"
           width="100%"
-        /> -->
+        />
       </div>
-    </section>
+    </section> -->
   </body>
 </html>
