--- a/2-month/Lesson 6/index.html
+++ b/2-month/Lesson 6/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <picture>
-      <!-- Webp -->
+    <!-- <picture>
       <source
         type="image/webp"
         media="(max-width: 525px)"
@@ -35,8 +34,7 @@
           ./images/coffee-desktop@2x.webp 2x
         "
       />
-
-      <!-- JPG -->
+      
       <source
         media="(max-width: 525px)"
         srcset="./images/coffee-mobile.jpg 1x, ./images/coffee-mobile@2x.jpg 2x"
@@ -56,7 +54,7 @@
         alt="A man making coffee"
         width="300"
       />
-    </picture>
+    </picture> -->
 
     <!-- <h1>Hello Uzbekistan!</h1> -->
   </body>
