@if @else statements

--- a/2-month/Lesson 8/index.html
+++ b/2-month/Lesson 8/index.html
@@ -8,7 +8,10 @@
     <title>Lesson 8</title>
   </head>
   <body>
-    <h2 class="hero__title">
+    <a href="#" class="btn">First</a>
+    <a href="#" class="btn-second">Second</a>
+
+    <!-- <h2 class="hero__title">
       GTD reliable energy supplier <br />
       <span>Middle East and Africa countries</span>
     </h2>
@@ -20,6 +23,6 @@
 
     <h2 class="second">Hello</h2>
 
-    <h3 class="third">Greenline</h3>
+    <h3 class="third">Greenline</h3> -->
   </body>
 </html>
