--- a/2-month/Lesson 9/index.html
+++ b/2-month/Lesson 9/index.html
@@ -11,12 +11,12 @@
 <body>
   
   <!-- Header -->
-  <header class="header">
+  <header class="header" style="display: none;">
     <div class="container header__container">
       <a class="header__logo" href="index.html">
         <img src="./images/logo.svg" alt="Salon logo" />
       </a>
-      
+
       <ul class="header__list">
         <li class="header__list-item">
           <a href="#">Home</a>
@@ -39,7 +39,7 @@
   <!-- Main -->
   <main>
     <!-- Hero section -->
-    <section class="hero" style="display: none;">
+    <section class="hero">
       <div class="container hero__container">
         <span class="subtitle">Welcome To Choppers</span>
         <h1 class="title">Best Hair Salon For A Professional Look</h1>
@@ -48,8 +48,8 @@
           with visible results.
         </p>
         <div class="hero__btns">
-          <a class="hero__btns-cta btn cta__btn" href="#"> Book now </a>
-          <a class="hero__btns-services btn service__btn" href="#">
+          <a class="cta__btn" href="#"> Book now </a>
+          <a class="service__btn" href="#">
             Services
           </a>
         </div>
