--- a/3-month/Lesson 3/index.html
+++ b/3-month/Lesson 3/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- <button onclick="clicker(5)">Click here</button> -->
+
     <script src="./js/main.js"></script>
   </body>
 </html>
