--- a/3-month/Lesson 4/index.html
+++ b/3-month/Lesson 4/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <button onclick="addUsers()">Add user</button>
+    <button id="btn" type="button">Add user</button>
     <script src="./js/main.js"></script>
   </body>
 </html>
