--- a/3-month/Lesson 4/index.html
+++ b/3-month/Lesson 4/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <button id="btn" type="button">Add user</button>
+    <p id="text"></p>
+    <button id="btn" type="button">Update text</button>
     <script src="./js/main.js"></script>
   </body>
 </html>
