Getting elements from html

--- a/3-month/Lesson 4/index.html
+++ b/3-month/Lesson 4/index.html
@@ -7,7 +7,15 @@
     <title>Document</title>
   </head>
   <body>
-    <p id="text"></p>
+    <input type="radio" name="car" />
+    <input type="radio" name="car" />
+    <input type="radio" name="car" />
+    <input type="radio" name="car" />
+
+    <p id="text" class="paragraf"></p>
+    <p id="text" class="paragraf"></p>
+    <p id="text" class="paragraf"></p>
+    <p id="text" class="paragraf"></p>
     <button id="btn" type="button">Update text</button>
     <script src="./js/main.js"></script>
   </body>
