querySelector vs querySelectorAll

--- a/3-month/Lesson 6/index.html
+++ b/3-month/Lesson 6/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
   </head>
   <body>
+    <h1 id="text">Hello</h1>
+    <h2 class="caption">Caption</h2>
+    <h2 class="caption">Caption</h2>
+    <h2 class="caption">Caption</h2>
+    <h2 class="caption">Caption</h2>
     <script src="./js/main.js"></script>
   </body>
 </html>
