Adding vs Removing classes

--- a/3-month/Lesson 6/index.html
+++ b/3-month/Lesson 6/index.html
@@ -5,13 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      .red {
+        color: red;
+      }
+    </style>
   </head>
   <body>
-    <h1 id="text">Hello</h1>
+    <p id="text">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit ratione
+      blanditiis rerum officia, sed libero quae optio mollitia commodi aut odio
+      quas, aliquam voluptate, iste pariatur sint. Corrupti quas commodi sed
+      voluptatibus. Eveniet aliquam sed itaque, aperiam ipsa, asperiores alias
+      ad rem deserunt unde recusandae sequi sint vel et ratione!
+    </p>
+    <button type="button" id="btnToggle">Toggle red</button>
+    <button type="button" id="btnAdd">Add red</button>
+    <button type="button" id="btnRemove">Remove red</button>
+
+    <!-- <h1 id="text">Hello</h1>
     <h2 class="caption">Caption</h2>
     <h2 class="caption">Caption</h2>
     <h2 class="caption">Caption</h2>
-    <h2 class="caption">Caption</h2>
+    <h2 class="caption">Caption</h2> -->
     <script src="./js/main.js"></script>
   </body>
 </html>
