--- a/3-month/Lesson 7/index.html
+++ b/3-month/Lesson 7/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <h2 id="error"></h2>
+    <button id="clicker">Click</button>
+    <input type="checkbox" id="checker" />
+    <!-- <h2 id="error"></h2>
     <form id="form">
       <label for="name">
         Name
@@ -18,7 +20,7 @@
         <input type="password" id="password" />
       </label>
       <button type="submit">Sign up</button>
-    </form>
+    </form> -->
 
     <script src="./js/main.js"></script>
   </body>
