--- a/3-month/Lesson 7/index.html
+++ b/3-month/Lesson 7/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <button id="clicker">Click</button>
-    <input type="checkbox" id="checker" />
+    <button id="clicker" disabled>Click</button>
+    <!-- <input type="checkbox" id="checker" /> -->
     <!-- <h2 id="error"></h2>
     <form id="form">
       <label for="name">
