--- a/3-month/Lesson 7/index.html
+++ b/3-month/Lesson 7/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <button id="clicker" disabled>Click</button>
+    <button id="clicker" title="Click here">Click</button>
     <!-- <input type="checkbox" id="checker" /> -->
     <!-- <h2 id="error"></h2>
     <form id="form">
