--- a/3-month/Lesson 7/index.html
+++ b/3-month/Lesson 7/index.html
@@ -5,10 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
   </head>
-  <body>
-    <button id="clicker" title="Click here" disabled>Click</button>
-    <button id="cleaner">clear</button>
+  <body class="bg-warning">
+    <!-- Amaliyot -->
+    <div class="container">
+      <form id="form" class="row flex-column align-items-center py-4">
+        <div class="mb-3 col-md-6">
+          <label for="name" class="form-label">Name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="name"
+            placeholder="Ibrohim"
+          />
+        </div>
+        <div class="mb-3 col-md-6">
+          <label for="img" class="form-label">Image</label>
+          <input type="url" class="form-control" id="img" placeholder="URL" />
+        </div>
+        <div class="mb-3 col-md-6">
+          <label for="info" class="form-label">Info</label>
+          <textarea class="form-control" id="info" rows="3"></textarea>
+        </div>
+        <button class="btn btn-dark col-2" type="submit">Add card</button>
+      </form>
+
+      <!-- Cards -->
+      <div class="cards">
+        <div class="card" style="width: 18rem">
+          <img src="..." class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End of Amaliyot -->
+
+    <!-- <button id="clicker" title="Click here" disabled>Click</button>
+    <button id="cleaner">clear</button> -->
     <!-- <input type="checkbox" id="checker" /> -->
     <!-- <h2 id="error"></h2>
     <form id="form">
@@ -23,6 +69,11 @@
       <button type="submit">Sign up</button>
     </form> -->
 
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
