--- a/3-month/Lesson 7/index.html
+++ b/3-month/Lesson 7/index.html
@@ -37,19 +37,7 @@
       </form>
 
       <!-- Cards -->
-      <div class="cards">
-        <div class="card" style="width: 18rem">
-          <img src="..." class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
+      <div class="cards d-flex gap-2"></div>
     </div>
     <!-- End of Amaliyot -->
 
