KeyUp, keydown, keypress

--- a/3-month/Lesson 8/index.html
+++ b/3-month/Lesson 8/index.html
@@ -7,7 +7,13 @@
     <title>Document</title>
   </head>
   <body>
-    <button id="btn">Click here</button>
+    <input
+      type="search"
+      name="search"
+      id="search"
+      placeholder="Shift+Q to Search..."
+    />
+    <!-- <button id="btn">Click here</button> -->
 
     <script src="./js/main.js"></script>
   </body>
