--- a/3-month/Lesson 8/index.html
+++ b/3-month/Lesson 8/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
   </head>
   <body>
+    <div>
+      <h1 id="hours">00</h1>
+      <h1 id="minutes">00</h1>
+      <h1 id="seconds">00</h1>
+    </div>
+
     <input
       type="search"
       name="search"
