--- a/3-month/Lesson 8/index.html
+++ b/3-month/Lesson 8/index.html
@@ -5,8 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      .nav {
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 20%;
+        padding: 20px;
+        height: 100vh;
+        background-color: black;
+        color: white;
+        transform: translateX(100%);
+        transition: all 0.2s ease;
+      }
+
+      .show {
+        transform: translateX(0);
+      }
+    </style>
   </head>
   <body>
+    <nav class="nav">
+      <ul>
+        <li>Home</li>
+        <li>about</li>
+        <li>contact</li>
+        <li>services</li>
+        <li>blog</li>
+        <li>tel</li>
+      </ul>
+    </nav>
+
+    <button id="toggler">Toggle</button>
+
     <div>
       <h1 id="hours">00</h1>
       <h1 id="minutes">00</h1>
