--- a/3-month/Lesson 9/index.html
+++ b/3-month/Lesson 9/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Fontawesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -14,9 +22,82 @@
     <title>Document</title>
   </head>
   <body>
-    <h2 class="todo" data-id="001" data-name="todo">Mushukni ovqatlantirish</h2>
-    <h2 class="todo" data-id="002" data-name="todo">Kuchukni ovqatlantirish</h2>
+    <!-- <h2 class="todo" data-id="001" data-name="todo">Mushukni ovqatlantirish</h2>
+    <h2 class="todo" data-id="002" data-name="todo">Kuchukni ovqatlantirish</h2> -->
 
+    <!-- Todos app -->
+    <section class="bg-warning pt-5" style="height: 100vh">
+      <div class="container">
+        <div class="row">
+          <h1 class="text-center text-secondary">Todo app with N92</h1>
+          <div class="col-md-6 mx-auto mt-5">
+            <form id="todoForm" class="input-group mb-3">
+              <span class="input-group-text" id="inputGroup-sizing-default"
+                >Type your todo</span
+              >
+              <input
+                type="text"
+                class="form-control"
+                aria-label="Sizing example input"
+                aria-describedby="inputGroup-sizing-default"
+              />
+              <button
+                class="btn btn-secondary"
+                type="submit"
+                id="button-addon2"
+              >
+                Button
+              </button>
+            </form>
+          </div>
+        </div>
+
+        <!-- Todos cards -->
+        <div class="row">
+          <div class="col-md-3 p-3 bg-light rounded">
+            <div class="form-check form-switch">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                role="switch"
+                id="flexSwitchCheckChecked"
+              />
+              <label class="form-check-label" for="flexSwitchCheckChecked"
+                >Checked switch checkbox input</label
+              >
+              <div class="d-flex justify-content-end gap-3 mt-3">
+                <button
+                  class="btn btn-warning"
+                  type="button"
+                  id="button-addon2"
+                >
+                  <i class="fas fa-pen"></i>
+                </button>
+                <button class="btn btn-danger" type="button" id="button-addon2">
+                  <i class="fas fa-trash"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End of Todos cards -->
+      </div>
+    </section>
+
+    <!-- UUID -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.2.0/uuidv4.min.js"
+      integrity="sha512-W6Yf3E7UBUKz5LqkjOHga4hkDX3huRhAvV8I6MFuZ0zX+5ttmVldY8nz9q26SwBItFrb9XSKNMiWEsKg8rDmXg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <!-- Fontawesome -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/all.min.js"
+      integrity="sha512-rpLlll167T5LJHwp0waJCh3ZRf7pO6IT1+LZOhAyP6phAirwchClbTZV3iqL3BMrVxIYRbzGTpli4rfxsCK6Vw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
