--- a/3-month/Lesson 9/index.html
+++ b/3-month/Lesson 9/index.html
@@ -53,33 +53,7 @@
         </div>
 
         <!-- Todos cards -->
-        <div class="row">
-          <div class="col-md-3 p-3 bg-light rounded">
-            <div class="form-check form-switch">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                role="switch"
-                id="flexSwitchCheckChecked"
-              />
-              <label class="form-check-label" for="flexSwitchCheckChecked"
-                >Checked switch checkbox input</label
-              >
-              <div class="d-flex justify-content-end gap-3 mt-3">
-                <button
-                  class="btn btn-warning"
-                  type="button"
-                  id="button-addon2"
-                >
-                  <i class="fas fa-pen"></i>
-                </button>
-                <button class="btn btn-danger" type="button" id="button-addon2">
-                  <i class="fas fa-trash"></i>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="row gap-3 justify-content-center" id="cards"></div>
         <!-- End of Todos cards -->
       </div>
     </section>
