--- a/3-month/Lesson 10/index.html
+++ b/3-month/Lesson 10/index.html
@@ -4,14 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- AOS css -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!-- Main css -->
     <link rel="stylesheet" href="./css/main.css" />
     <title>Libraries</title>
   </head>
   <body>
+    <div class="container">
+      <div class="box red" data-aos="fade-right">1</div>
+      <div class="box blue" data-aos="fade-left">2</div>
+      <div class="box orange" data-aos="flip-right">3</div>
+      <div class="box brown" data-aos="flip-left">4</div>
+      <div class="box green" data-aos="fade-down-right">5</div>
+    </div>
 
-    <button id="click">Click</button>
-    
+    <!-- <button id="click">Click</button> -->
+
+    <!-- AOS js -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Main js -->
     <script src="./js/main.js"></script>
   </body>
