--- a/3-month/Lesson 11/index.html
+++ b/3-month/Lesson 11/index.html
@@ -15,13 +15,13 @@
   </head>
   <body>
     <!-- Hero section -->
-    <section class="hero">
+    <!-- <section class="hero">
       <div class="container">
-        <!-- Slider main container -->
+        Slider main container
         <div class="swiper">
-          <!-- Additional required wrapper -->
+          Additional required wrapper
           <div class="swiper-wrapper">
-            <!-- Slides -->
+            Slides
             <div class="swiper-slide myslide">
               <div class="slide__info">
                 <div>
@@ -80,7 +80,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- End of Hero section -->
 
     <!-- Swiper js -->
