--- a/4-month/Lesson 4/index.html
+++ b/4-month/Lesson 4/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
   </head>
   <body>
+    <div id="users"></div>
+
     <form id="form">
       <input type="text" placeholder="Name" />
       <button type="submit">Add user</button>
