--- a/4-month/Lesson 8/index.html
+++ b/4-month/Lesson 8/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
   </head>
   <body>
+    <h2 id="result"></h2>
+
+    <input type="text" placeholder="Your name" id="nameInput" />
+    <button id="sendBtn">Send</button>
+
     <script src="./js/main.js"></script>
   </body>
 </html>
