--- a/4-month/Lesson 11/index.html
+++ b/4-month/Lesson 11/index.html
@@ -7,8 +7,10 @@
     <title>Document</title>
   </head>
   <body>
-    <h1 id="heading">Main page</h1>
+    <!-- <h1 id="heading">Main page</h1> -->
 
-    <script type="module" src="./js/main.js"></script>
+    <!-- OOP -->
+    <script src="./main.js"></script>
+    <!-- <script type="module" src="./js/main.js"></script> -->
   </body>
 </html>
