--- a/4-month/Lesson 12/index.html
+++ b/4-month/Lesson 12/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
   </head>
   <body>
+    <form id="myForm">
+      <input type="text" />
+      <button type="submit">Add todo</button>
+    </form>
+
     <script src="./js/main.js"></script>
   </body>
 </html>
